--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "homepage": "https://github.com/zdychacek/sse_test",
   "dependencies": {
     "express": "~3.4.6",
-    "jade": "~0.35.0"
+    "jade": "~0.35.0",
+    "express-namespace": "~0.1.1"
   },
   "devDependencies": {
     "matchdep": "~0.3.0",
